# isucon11-final

./: .gitignore  README.md  go.work
.github/: label-path-mapping.yaml
.github/workflows/: build.yaml  ci-bench.yaml  ci-frontend.yml  ci-packer.yaml  ci-rust.yaml  ci-webapp.yaml  ci.yaml  frontend.yaml  go.yaml  golang.yaml  labeler.yaml  nodejs.yaml  php.yaml  rust.yaml
.github_/: .golangci.yaml
.github_/workflows/: ruby.yaml
benchmarker/: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum  main.go  prom.go
benchmarker/api/: announcement.go  assert.go  attendancecode.go  browseraccess.go  course.go  grade.go  initialize.go  interface.go  login.go  phase.go  request.go  syllabus.go  user.go
benchmarker/assets/: gen.go
benchmarker/fails/: fails.go
benchmarker/generate/: announcement.go  class.go  course.go  generate.go  image.go  initialize.go  pdf.go  pdf_test.go  random.go  score.go  submission.go  timeslot.go  user.go  utils.go
benchmarker/model/: announcement.go  announcement_test.go  capacity_counter.go  class.go  course.go  course_list.go  course_manager.go  coursemanager.go  coursemanager_test.go  grade.go  (+4 more)
dev/: Makefile  ci.dockerfile  docker-compose-ci.yaml  docker-compose-go.yaml  docker-compose-golang.yaml  docker-compose-nodejs.yaml  docker-compose-php.yaml  docker-compose-ruby.yaml  docker-compose-rust.yaml  docker-compose.yml
docs/: .textlintrc.json  isucholar.md  manual.md  package-lock.json  package.json  prh-rule.yaml
webapp/: .gitignore  .tbls.yml  Makefile  README.md  docker-compose.yml
webapp/rust/: Cargo.toml
webapp/rust/src/: db.rs  lib.rs  main.rs  middleware.rs  util.rs
(+258 files in other folders)
