[package]
name = "isucholar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.7"
actix-multipart = "0.4.0-beta.6"
actix-session = "0.5.0-beta.2"
actix-web = { version = "4.0.0-beta.9", default-features = false }
bcrypt = "0.10"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1"
listenfd = "0.3"
log = "0.4"
mime = "0.3"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.5", default-features = false, features = ["macros", "runtime-actix-rustls", "mysql", "chrono", "decimal"] }
tokio = { version = "1", features = ["fs", "process"] }
ulid = "0.4"
